<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:inputType="phone"
            android:hint="@string/et_phone_no"/>
        <Button
            android:id="@+id/buttonSelectPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/more"
            android:contentDescription="@string/bn_add_contact_phone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textViewNameOfContactInFragmentPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>